--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -1,11 +1,11 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
-  class: TestMyDashboardUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
+#  class: TestMyDashboardUI
+#  tests:
 #    - test_my_dashboard_edit_event_ui
-    - test_my_dashboard_email_ui
+#    - test_my_dashboard_email_ui
 #    - test_sms_icon
 #    - test_sorting_columns
 #    - test_searching_by_columns
@@ -127,7 +127,8 @@ tests_config:
 #    - test_verify_live_close_position_crm_ui     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
 
 ############################################# LOAD TESTS ############################################
-#- module: src.test.python.ui.automation.implementation.crm.load.TestLoadCRMUI
-#  class: TestLoadCRMUI
-#  tests:
-#    - test_load_switch_tabs_ui
+- module: src.test.python.ui.automation.implementation.crm.load.TestLoadCRMUI
+  class: TestLoadCRMUI
+  tests:
+    - test_load_switch_tabs_ui
+#    - test_load_switch_tabs
