--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -4,9 +4,9 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.ca.Test_SignUp
   class: SignUpTest
   tests:
-#    - test_check_sign_up
-    - test_check_login
-    - test_client_deposit_page_loading
+    - test_check_sign_up
+#    - test_check_login
+#    - test_client_deposit_page_loading
 #    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
