--- a/src/main/python/ui/crm/model/BrandsXpath/24option_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/24option_xpath.yml
@@ -2,6 +2,7 @@
 CADepositPage:
   deposit_page: "//li[@data-groups='Creditcard Mostused']"
 CALoginPage:
+  close_payment_btn: "//*[@id='modal-close' and @class='close']"
   login_btn: "//span[contains(text(), 'Log In')]"
   login_email_input: "//*[@id='Username']"
   login_password_input: "//*[@id='Password']"
