--- a/src/test/python/resources/config/tests_hourly.yml
+++ b/src/test/python/resources/config/tests_hourly.yml
@@ -5,11 +5,12 @@ tests_config:
 #  class: SignUpTest
 #  tests:
 #    - test_check_login
+#    - test_client_deposit_page_loading
 
 - module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
   class: TestPagesCA
   tests:
-#    - test_graph_ca
+    - test_graph_ca
     - test_asset_price_ca
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
