--- a/src/test/python/resources/config/tests_hourly.yml
+++ b/src/test/python/resources/config/tests_hourly.yml
@@ -5,6 +5,7 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_login
+    - test_client_deposit_page_loading
 
 - module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
   class: TestPagesCA
