--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -35,8 +35,8 @@ brands:
 #- name: etfinance
 #  config_file: etfinance.yml
 
-#- name: fairbit
-#  config_file: fair-bit.yml
+- name: fairbit
+  config_file: fair-bit.yml
 
 #- name: financix
 #  config_file: financix.yml
@@ -68,8 +68,8 @@ brands:
 #- name: moneta
 #  config_file: moneta.yml
 
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
 
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
