--- a/src/test/python/resources/config/tests1.yml
+++ b/src/test/python/resources/config/tests1.yml
@@ -6,4 +6,4 @@ tests_config:
   tests:
     - test_leads_searching_columns_ui
     - test_mass_assign_leads_ui
-    - test_mass_edit_leads_ui
+#    - test_mass_edit_leads_ui
