--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -21,15 +21,15 @@ tests_config:
 #    - test_filter_ta_ui
 
 ########################################## LEADS ###################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-#  directive: reload_configuration
-#  class: TestLeadsModuleUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+  directive: reload_configuration
+  class: TestLeadsModuleUI
+  tests:
 #    - test_leads_searching_columns_ui
 #    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
 #    - test_edit_lead_ui
-#    - test_convert_lead_ui   # Creates a lead and converts it to a client
+    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
