--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -95,11 +95,11 @@ brands:
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
 
-- name: strattonmarkets-eu
-  config_file: strattonmarkets-eu.yml
+#- name: strattonmarkets-eu
+#  config_file: strattonmarkets-eu.yml
 
-#- name: trade99
-#  config_file: trade99.yml
+- name: trade99
+  config_file: trade99.yml
 
 #- name: tradixa
 #  config_file: tradixa.yml
