--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,11 +9,11 @@ brands:
 #- name: itrader_global
 #  config_file: itrader_global.yml
 
-#- name: gmo
-#  config_file: gmo.yml
+- name: gmo
+  config_file: gmo.yml
 
 #- name: brokerxp
 #  config_file: brokerxp.yml
 
-- name: forex_staging
-  config_file: forex_staging.yml
+#- name: forex_staging
+#  config_file: forex_staging.yml
