--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -5,8 +5,8 @@ brands:
 #- name: alferatrade
 #  config_file: alferatrade.yml
 
-- name: analystq
-  config_file: analystq.yml
+#- name: analystq
+#  config_file: analystq.yml
 
 #- name: any1profit
 #  config_file: any1profit.yml
