--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -28,19 +28,19 @@ tests_config:
 #    - test_leads_searching_columns_ui
 #    - test_leads_sorting_columns_ui
 #    - test_mass_assign_leads_ui
-    - test_mass_edit_leads_ui
+#    - test_mass_edit_leads_ui
 #    - test_edit_lead_ui
 #    - test_edit_pencil_lead_ui
-#    - test_convert_lead_ui   # Creates a lead and converts it to a client
+    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ########################################### CLIENTS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
-  class: TestClientsModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
+#  class: TestClientsModuleUI
+#  tests:
 #    - test_clients_searching_columns_ui
 #    - test_clients_sorting_columns_ui
 #    - test_mass_assign_clients_ui
-    - test_mass_edit_clients_ui
+#    - test_mass_edit_clients_ui
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
 #  class: TestClientDetailsUI
@@ -49,17 +49,17 @@ tests_config:
 #    - test_add_interaction_ui
 
 ######################################### MT4 ACTIONS #############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
-#  directive: reload_configuration
-#  class: TestMT4UI
-#  tests:
-#    - test_create_demo_ta_ui
-#    - test_deposit_crm_ui  # create live mt account and make deposit
-#    - test_withdraw_crm_ui
-#    - test_credit_in_crm_ui
-#    - test_credit_out_crm_ui
-#    - test_transfer_crm_ui
-#    - test_update_mt_user_ui
+- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
+  directive: reload_configuration
+  class: TestMT4UI
+  tests:
+    - test_create_demo_ta_ui
+    - test_deposit_crm_ui  # create live mt account and make deposit
+    - test_withdraw_crm_ui
+    - test_credit_in_crm_ui
+    - test_credit_out_crm_ui
+    - test_transfer_crm_ui
+    - test_update_mt_user_ui
 
 ######################################## AFFILIATES MODULE #########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module_ui.TestAffiliatesModuleUI
@@ -102,15 +102,15 @@ tests_config:
 #    - test_audit_logs_searching_columns_ui
 
 ################################################# TASKS #############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
-  class: TestTasksModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
+#  class: TestTasksModuleUI
+#  tests:
 #    - test_tasks_searching_columns_ui
 #    - test_tasks_sorting_columns_ui
 #    - test_add_event_ui
 #    - test_edit_event_ui
 #    - test_delete_event_ui
-    - test_tasks_mass_edit
+#    - test_tasks_mass_edit
 #    - test_tasks_email_ui
 
 ############################################# USER MANAGEMENT #######################################
