--- a/src/test/python/resources/config/tests_ca_ui.yml
+++ b/src/test/python/resources/config/tests_ca_ui.yml
@@ -5,7 +5,7 @@ tests_config:
   tests:
     - test_sign_up_ui
 #    - test_registred_client_in_crm_ui
-    - test_update_client_ui
+#    - test_update_client_ui
     - test_support_tickets_ui
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
