--- a/src/test/python/resources/config/Brands/marketrip.yml
+++ b/src/test/python/resources/config/Brands/marketrip.yml
@@ -1,6 +1,6 @@
 pretty_name: "Marketrip"
 url: "https://marketrip.ptscrm.com/"
-url_ca: "https://www.marketrip.com/trade-room/?#/"
+url_ca: "https://www.marketrip.co/trade-room/?#/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
 number_live_acc: "83212198"
