--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -60,11 +60,11 @@ tests_config:
 #    - test_check_email_popup
 #
 ############################################ CONVERT LEAD ############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
 
 ############################################# CLIENTS ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
@@ -72,11 +72,11 @@ tests_config:
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client.
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
-#  class: MassEditTestCRM
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+  class: MassEditTestCRM
+  tests:
 #    - test_update_client_details
-#    - test_clients_mass_edit
+    - test_clients_mass_edit
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
 #  class: MassAssignTestCRM
@@ -110,15 +110,15 @@ tests_config:
 #    - test_check_week_tab
 #
 ############################################### CLIENT'S DETAILS ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-  class: TradingAccountCrmTest
-  tests:
-    - fill_questioner_new_client
-    - test_crm_open_trading_account  # open a new trading account
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
-  class: ChangePasswordTestCRM
-  tests:
-    - test_change_client_password_from_crm  # change a client account password from the crm
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+#  class: TradingAccountCrmTest
+#  tests:
+#    - fill_questioner_new_client
+#    - test_crm_open_trading_account  # open a new trading account
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Change_Password
+#  class: ChangePasswordTestCRM
+#  tests:
+#    - test_change_client_password_from_crm  # change a client account password from the crm
 #    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
